--- a/app/components/Search.css
+++ b/app/components/Search.css
@@ -1,106 +1,121 @@
 @import "../Variables";
 .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: var(--dark-grey);
-    z-index: 1000;
-    & .overlay-inner {
-        height: 100%;
-        overflow: scroll;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: var(--dark-grey);
+  z-index: 1000;
+  & .overlay-inner {
+    height: 100%;
+    overflow: scroll;
+  }
+  & .delete {
+    cursor: pointer;
+    padding: 8px 40px;
+    top: 26px;
+    right: -6px;
+    position: absolute;
+    & img {
+      width: 20px;
     }
-    & .delete {
-      cursor: pointer;
-        padding: 8px 40px;
-        top: 26px;
-        right: -6px;
-        position: absolute;
-        & img {
-            width: 20px;
-        }
-    }
+  }
 }
 
 .search-no-results {
-    text-align: center;
-    padding-top: 100px;
-    color: white;
-    & p {
-        font-size: 18px;
-    }
+  text-align: center;
+  padding-top: 100px;
+  color: white;
+  & p {
+    font-size: 18px;
+  }
 }
 
 .search-container {
-    color: white;
-    text-align: center;
-    & .search-wrapper {
-        padding: 20% 10% 0;
-        & .filter-wrapper, & .search-input {
-            display: inline-block;
-            padding: 0;
-        }
-        & .search-input {
-            background: none;
-            border: none;
-            border-bottom: 1px solid white;
-            color: white;
-            width: 60%;
-            height: 30px;
-        }
-        & .label {
-            display: inline-block;
-            margin: 0 20px;
-        }
-        & .search-icon {
-            margin-left: -12px;
-        }
-        & .tool-tip {
-            border-radius: var(--border-raidus);
-            position: absolute;
-            background: var(--accent-color);
-            padding: 3px 10px;
-            color: white;
-            top: -45px;
-            left: -5px;
-            visibility: hidden;
-        }
-        & .product {
-            left: -15px;
-        }
-        & .company {
-            left: -20px;
-        }
-        & .transport {
-            left: -40px;
-        }
-        & .filter-icons-wrapper {
-            display: inline-block;
-            background: white;
-            border-radius: 10px;
-            & .filter-icon-wrapper {
-                position: relative;
-                padding: 5px 2px;
-                width: 40px;
-                cursor: pointer;
-                border-left: 1px solid var(--light-grey);
-                color: black;
-                display: inline-block;
-                & p {
-                    margin: 0;
-                }
-                & .selected {
-                    color: var(--accent-color);
-                }
-            }
-            & .filter-icon-wrapper:first-child {
-                border: none;
-            }
-            & .filter-icon-wrapper:last-child {
-                vertical-align: top;
-                padding: 9px 0;
-            }
-        }
+  color: white;
+  text-align: center;
+  & .search-wrapper {
+    padding: 20% 10% 0;
+    & .filter-wrapper, & .search-input {
+      display: inline-block;
+      padding: 0;
     }
+    & .search-input {
+      background: none;
+      border: none;
+      border-bottom: 1px solid white;
+      color: white;
+      width: 60%;
+      height: 30px;
+    }
+    & .label {
+      display: inline-block;
+      margin: 0 20px;
+    }
+    & .search-icon {
+      margin-left: -12px;
+    }
+    & .tool-tip {
+      border-radius: var(--border-raidus);
+      position: absolute;
+      background: var(--accent-color);
+      padding: 3px 10px;
+      color: white;
+      top: -45px;
+      left: -5px;
+      visibility: hidden;
+    }
+    & .product {
+      left: -15px;
+    }
+    & .company {
+      left: -20px;
+    }
+    & .transport {
+      left: -40px;
+    }
+    & .filter-icons-wrapper {
+      display: inline-block;
+      background: white;
+      border-radius: 10px;
+      & .filter-icon-wrapper {
+        position: relative;
+        padding: 5px 2px;
+        width: 40px;
+        cursor: pointer;
+        border-left: 1px solid var(--light-grey);
+        color: black;
+        display: inline-block;
+        & p {
+          margin: 0;
+        }
+        & .selected {
+          color: var(--accent-color);
+        }
+      }
+      & .filter-icon-wrapper:first-child {
+        border: none;
+      }
+      & .filter-icon-wrapper:last-child {
+        vertical-align: top;
+        padding: 9px 0;
+      }
+    }
+  }
+}
+
+@media all and (max-width: 480px) {
+
+  .search-container {
+    & .search-wrapper {
+      padding: 20% 5% 0;
+      & .search-input {
+          width: 80%;
+      }
+      & .filter-wrapper {
+          padding: 10px 0 0 0;
+      }
+    }
+  }
 }
