--- a/app/components/Sidebar.css
+++ b/app/components/Sidebar.css
@@ -42,14 +42,15 @@
 
       & .profile-info {
         padding: 0 32px;
-        height: 442px;
+        /* height: 442px; */
         color: white;
 
         & .profile-image-wrapper {
-          width: 16vw;
-          margin: 0 0;
-          height: 16vw;
-          padding: 30px 0;
+            & .profile-image {
+                width: 100%;
+                height: 200px;
+                background-size: cover;
+            }
         }
 
         & h3 {
@@ -100,10 +101,19 @@
     }
     & .sidebar-inner {
         & .profile-info {
-            height: 448px;
+            /* height: 448px; */
         }
     }
     & .products {
         background: var(--middle-blue);
+    }
+    @media all and (max-width: 480px) {
+        & .sidebar-wrapper {
+            width: 100%;
+            display: block;
+            & .sidebar {
+                min-height: inherit;
+            }
+        }
     }
 }
